--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 body {
-  background-color: #f8f9fa;
+  background-color: #0074e9;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   color: #212529;
 }
@@ -25,6 +25,12 @@ h5 {
   font-weight: 600 !important;
 }
 
+.app-container {
+  background-color: #254049;
+  min-height: 100vh;
+  padding: 4vh 4rem;
+}
+
 p {
   font-size: 1rem;
   line-height: 1.5;
@@ -39,4 +45,6 @@ p {
 
 .table {
   background-color: white;
+  border-radius: 15px;
+  overflow: hidden;
 }
